# gw2fuzzies

./: Cargo.toml  flake.nix  shell.nix
src/: itemstats.rs  main.rs
src/api/: buildtrait.rs  gw2trait.rs  itemstats.rs  mod.rs
src/api/fact/: fact.rs  gw2trait.rs  mod.rs
