[package]
name = "gw2fuzzies"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures-util = { version = "0.3.31", features = [ "sink" ] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.15", features = [ "json", "stream" ] }
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.44.2", features = [ "full" ] }
tokio-into-sink = "0.1.0"
tokio-stream = "0.1.17"
